fix carousel image and text cut off

--- a/components/carousel/FeaturedView.less
+++ b/components/carousel/FeaturedView.less
@@ -25,7 +25,7 @@
             flex-direction: row;
             height: @CarouselHeight;
             background-color: transparent;
-            
+
             .info {
                 margin-left: @sitePadding;
                 width: 50%;
@@ -34,13 +34,14 @@
 
                 &-container {
                     display: -webkit-flex;
-                    height: @CarouselHeight;
+                    //height: @CarouselHeight;
                     flex-direction: column;
 
                     h1 {
                         margin: 0;
                         margin-top: 200px;
                         font: bold 36px Roboto;
+                        line-height: 1;
                         text-shadow: 0 3px 9px #00000066;
                         color: white;
                         word-wrap: break-word;
@@ -57,6 +58,7 @@
                         color: #edd8cd;
                         text-shadow: 0 3px 9px #00000066;
                         font: 18px Roboto;
+                        line-height:1.2;
                         word-wrap: break-word;
                         overflow: hidden;
                         text-overflow: ellipsis;
@@ -135,7 +137,18 @@
                     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
                     object-fit: cover;
                     background-color: #00000066;
+                    opacity:0;
+
+                    &.lazyloaded {
+                        opacity: 1;
+                    }
+
+                    &[src="/images/noImage.svg"] {
+                        object-fit: contain !important;
+                    }
+
                 }
+
                 @media (max-width: @mobileLargeBP) {
                     width: 100%;
                     margin: 0px;
